-- creation tables
create table locality_types (
    locality_type_id int generated by default as identity primary key,
    locality_type_name varchar(127)
);
create table locality_trip_descriptions (
    locality_trip_description_id int generated by default as identity primary key,
    description text not null,
    count_of_landmarks int,
    count_of_hotels int,
    year_of_foundation int
);
create table localities (
    locality_id int generated by default as identity primary key,
    locality_name varchar(127) not null unique,
    population int not null,
    area float not null,
    locality_type_id int references locality_types(locality_type_id),
    locality_trip_description_id int references locality_trip_descriptions(locality_trip_description_id)
);
create table road_types (
    road_type_id int generated by default as identity primary key,
    road_type_name varchar(127)
);
create table roads (
    f_locality_id int references localities(locality_id),
    s_locality_id int references localities(locality_id),
    length int not null,
    road_type_id int references road_types(road_type_id)
);
-- fill tables with data
INSERT INTO locality_types(locality_type_name)
VALUES ('City'),
    ('Village');
INSERT INTO locality_trip_descriptions(
        description,
        count_of_landmarks,
        count_of_hotels,
        year_of_foundation
    )
VALUES (
        'Omsk is the third largest city in Siberia after Novosibirsk and Krasnoyarsk, and the twelfth-largest city in Russia. It is an important transport node, serving as a train station for the Trans-Siberian Railway and as a staging post for the Irtysh River.',
        17,
        20,
        1716
    );